content/docs/v2026.6.19/guides/milvus/scaling/vertical-scaling/overview.md
---
title: Milvus Vertical Scaling Overview
menu:
  docs_v2026.6.19:
    identifier: milvus-scaling-vertical-scaling-overview
    name: Overview
    parent: milvus-scaling-vertical-scaling
    weight: 10
menu_name: docs_v2026.6.19
section_menu_id: guides
info:
  autoscaler: v0.50.0
  cli: v0.65.0
  dashboard: v0.41.0
  installer: v2026.6.19
  ops-manager: v0.52.0
  product: kubedb
  provisioner: v0.65.0
  schema-manager: v0.41.0
  ui-server: v0.41.0
  version: v2026.6.19
  webhook-server: v0.41.0
---

> New to KubeDB? Please start [here](/docs/v2026.6.19/README).

# Vertical Scaling Milvus

This guide will give an overview on how the KubeDB Ops-manager operator vertically scales a `Milvus` database.

## Before You Begin

- You should be familiar with the following `KubeDB` concepts:
  - [Milvus](/docs/v2026.6.19/guides/milvus/concepts/milvus)
  - [MilvusOpsRequest](/docs/v2026.6.19/guides/milvus/concepts/milvusopsrequest)

## How Vertical Scaling Process Works

Vertical scaling changes the CPU/memory **resources** of Milvus pods. A `MilvusOpsRequest` of type `VerticalScaling` carries the new resources under `spec.verticalScaling`, keyed by the component you want to scale:

- **Standalone:** use the `node` key.
- **Distributed:** use any of `proxy`, `mixcoord`, `datanode`, `querynode`, `streamingnode` (you can scale several at once).

```yaml
spec:
  type: VerticalScaling
  verticalScaling:
    node:                 # 'node' for standalone; role names for distributed
      resources:
        requests:
          cpu: "1"
          memory: "2Gi"
        limits:
          cpu: "1"
          memory: "2Gi"
```

The flow is:

1. A user creates a `MilvusOpsRequest` of type `VerticalScaling`.
2. The operator validates the request and pauses the `Milvus` database.
3. The operator updates the resources in the `Milvus` object's `spec.podTemplate` and the corresponding PetSets.
4. Pods are restarted (evicted and recreated) so they come up with the new resources.
5. The operator resumes the database and marks the `MilvusOpsRequest` as `Successful`.

In the next doc, we will see a step-by-step guide on vertically scaling a Milvus database.
